--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -41,20 +41,19 @@ h1, h2, h3, h4, #navbar li, #footer {
   }
 
 h2 {
-  font-size: 19px;
+  font-size: 29px;
   letter-spacing:1px;
   }
 
 h3, h4 {
   font-weight:normal;
-  font-size:25px;
+  font-size:1.2em;
   margin: 0;
   letter-spacing: .5px;
   }
 
 h3 {
-  color: #636363;
-  float:left;
+  color: #95a2a2;
   margin-top: 10px;
   }
 
@@ -62,7 +61,7 @@ h4 {
   margin-bottom: 27px;
   }
 
-h2.title, h3.title {
+h2.title, .block h3.title {
   line-height: 1em;
   margin-top: 0;
   margin-bottom: .5em;
@@ -70,10 +69,15 @@ h2.title, h3.title {
   margin-right: -16px;
   padding: 16px;
   padding-top: 13px;
+  background: #fcfcfc;
   border-bottom:1px solid #e5e5e5;
   font-weight: normal;
   font-family: 'LeagueGothicRegular', sans-serif;
+  font-size:27px;
+  letter-spacing: 0;
   }
+
+
 
 #content .node h3.title {
   border: none;
@@ -201,7 +205,7 @@ a:hover {
   margin-top:6px;
   }
 
-#block-scholar-1 h1, #block-vsite_menus-0 ul li {
+#block-scholar-1 h1, #navbar ul li {
   float: left;
   margin: 0;
   height: 29px;
@@ -209,8 +213,8 @@ a:hover {
   text-transform: uppercase;
   }
 
-#block-vsite_menus-0 ul li {
-  font-size: 13px;
+#navbar ul li {
+  font-size: 15px;
   letter-spacing: 2px;
   }
 
@@ -226,7 +230,7 @@ a:hover {
   background: #fa8b18;
   }
 
-#block-vsite_menus-0 ul li.last {
+#navbar ul li.last {
   margin-right: 0;
   }
 
@@ -246,22 +250,22 @@ a:hover {
   height: 29px;
   }
 
-#block-vsite_menus-0 ul li a, #block-scholar-1 h1 a {
+#navbar ul li a, #block-scholar-1 h1 a {
   display:block;
   }
 
-#block-vsite_menus-0 ul li a {
+#navbar ul li a {
   padding-left: 12px;
   padding-right: 12px;
   background:#db7002;
   }
 
 
-#block-vsite_menus-0 ul li.first a {
+#navbar ul li.first a {
   padding-left: 26px;
   }
 
-#block-vsite_menus-0 ul li a.active, #block-vsite_menus-0 ul li a.active:hover {
+#navbar ul li a.active, #navbar ul li a.active:hover {
   color: #000;
   background:#db7002;
   }
