--- a/sites/all/modules/scholar_scholar/scholarregister/theme/scholarregister.css
+++ b/sites/all/modules/scholar_scholar/scholarregister/theme/scholarregister.css
@@ -11,7 +11,7 @@ body.page-site-register #wrapper, body.page-site-register #extradiv {
   }
 
 body.page-site-register #container {
-  padding: 32px 32px 0 32px;
+  padding: 17px 32px 0 32px;
   width: 676px;
   }
 
@@ -55,8 +55,9 @@ body.page-site-register #header-left {
 
 body.page-site-register #header h1 {
   background-image: url(images/register-logo.png);
-  width: 257px;
-  height:64px;
+  width: 295px;
+  height:55px;
+  margin-left: 0;
   }
 
 body.page-site-register h2.title {
