--- a/sites/all/themes/openscholar/scholar_theme_04/scholar-theme-04.css
+++ b/sites/all/themes/openscholar/scholar_theme_04/scholar-theme-04.css
@@ -173,6 +173,10 @@ body.sidebar-left #content-wrapper, body.header-left-main #header-wrapper {
     font-weight: bold;
     }
 
+#sidebar-left #term-head a, #sidebar-right #term-head a {
+  display:inline !important;
+  }
+
 #sidebar-left a:hover, #sidebar-right a:hover, #sidebar-left a.active, #sidebar-right a.active {
     color: #fff;
     background:#adad84;
