--- a/sites/all/themes/custom/openscholar/openscholar.css
+++ b/sites/all/themes/custom/openscholar/openscholar.css
@@ -74,13 +74,17 @@ a:hover,  {
   }
 
 h2, h3 {
-  font-family: 'DeliciousRoman', arial, sans-serif;
   font-size: 1.3em;
   }
 
 h2 {
   margin-bottom: 1em;
   }
+
+h3 {
+  margin:1.5em 0;
+  }
+
 
 p.copy {
   width: auto;
@@ -343,7 +347,7 @@ body.no-sidebars #content-main #content {
   font-weight: normal;
   }
 
-admin-menu #content-main #content h2.title {
+.admin-menu #content-main #content h2.title {
   top: 95px;
   }
 
@@ -388,8 +392,9 @@ body.section-home #content-main #content {
   position: relative;
   }
 
-body.section-home #content-main {
+body.section-home #content-wrapper #content-main {
   overflow:hidden;
+  background: #000;
   }
 
 body.section-home #header {
@@ -397,6 +402,10 @@ body.section-home #header {
   }
 
 body.section-home #content-wrapper {
+  top: 59px;
+  }
+
+body.admin-menu.section-home #content-wrapper {
   top: 79px;
   }
 
@@ -450,6 +459,7 @@ body.section-home #content-wrapper {
   font-size: 14px;
   line-height: 1.3em;
   margin-bottom: 1em;
+  margin-top: 0;
   }
 
 #feature-academic-content {
@@ -471,13 +481,24 @@ body.section-home #content-wrapper {
   border-left: none;
   }
 
-
-#block-views-iqss_project_sites-block_2 {
-  background:url(images/featured-top.png) no-repeat 0 0;
+#content-row-3 {
+  text-align: right;
+  color: #fff;
+  width:968px;
   }
 
-#block-views-iqss_project_sites-block_2 ul, #block-views-iqss_project_sites-block_2 .more-link {
-  background:url(images/featured-main.png);
-  width: 100%;
-  height: 253px;
+#content-row-3 h3 {
+  font: 48px/normal 'DeliciousRoman', sans-serif;
+  color: #fff;
+  margin: 0 .2em 0 0;
+  }
+
+#content-row-3 li {
+  display:inline;
+  font: 30px/normal 'DeliciousRoman', sans-serif;
+  }
+
+#content-row-3 li a, #content-row-3 li a:visited {
+  color: #abd407;
+  text-decoration: none;
   }
