--- a/sites/all/themes/openscholar/scholar_theme_06/scholar-theme-06.css
+++ b/sites/all/themes/openscholar/scholar_theme_06/scholar-theme-06.css
@@ -221,3 +221,7 @@ body.two-sidebars #content {
     color: #333;
     border-color:#CFCFCF;
     }
+
+p.copy a.poweredby {
+  background-position: 0 -29px;
+  }
