--- a/sites/all/themes/openscholar/scholar_theme_08/scholar-theme-08.css
+++ b/sites/all/themes/openscholar/scholar_theme_08/scholar-theme-08.css
@@ -140,11 +140,7 @@ body.admin-menu #wrapper {
   }
 
 p.copy {
-  margin: 24px 0 0 232px;
-  }
-
-body.sidebar-left p.copy, body.two-sidebars p.copy {
-  margin-left: 396px;
+  margin: 24px 20px 0 20px;
   }
 
 #footer a, #footer a:visited {
@@ -160,6 +156,9 @@ body.sidebar-left p.copy, body.two-sidebars p.copy {
   border-color: #444;
   }
 
+p.copy a.poweredby {
+  background-position: 0 -29px;
+  }
 
 /*HEADER */
 #logo {
