--- a/sites/all/themes/openscholar/scholar_theme_11/scholar-theme-11.css
+++ b/sites/all/themes/openscholar/scholar_theme_11/scholar-theme-11.css
@@ -107,6 +107,9 @@ body.no-sidebars #content-wrapper  {
   background:#fff;
   }
 
+p.copy a.poweredby {
+  background-position: 0 -29px;
+  }
 
 /* SIDEBAR ELEMENTS */
 
