--- a/sites/all/themes/openscholar/scholar_theme_12/scholar-theme-12.css
+++ b/sites/all/themes/openscholar/scholar_theme_12/scholar-theme-12.css
@@ -203,3 +203,7 @@ p.copy, p.copy a, p.copy a:visited {
 p.copy a {
   text-decoration: underline;
   }
+
+p.copy a.poweredby {
+  background-position: 0 -29px;
+  }
