download icon to openscholar; fix to poweredby

--- a/sites/all/themes/custom/openscholar/openscholar.css
+++ b/sites/all/themes/custom/openscholar/openscholar.css
@@ -161,6 +161,11 @@ p.copy {
   color: #000;
   }
 
+#header-wrapper ul.menu li.first a {
+  background:url(images/download.png) no-repeat 0 12px transparent;
+  padding-left: 44px;
+  }
+
 #header-wrapper ul.menu li a:hover {
   color: #000;
   }
@@ -379,9 +384,7 @@ p.copy {
   }
 
 p.copy a.poweredby {
-  background: url(images/poweredby-on-dark.png) no-repeat 0 0 transparent;
-  width:77px;
-  height: 26px;
+  background-position: 0 -29px;
   }
 
 /* FRONT PAGE*/
@@ -393,9 +396,9 @@ body.section-home #content-main #content {
   }
 
 body.section-home #content-wrapper #content-main {
-  overflow:hidden;
   background: #000;
   max-width: 1200px;
+  overflow-x:hidden;
   }
 
 body.section-home #header {
