--- a/sites/all/themes/openscholar/scholar_base/scholar-base.css
+++ b/sites/all/themes/openscholar/scholar_base/scholar-base.css
@@ -121,7 +121,7 @@ p.copy #powered-link {
   }
 
 p.copy a.poweredby  {
-  background: url(images/poweredby.png) no-repeat 0 0 #fff;
+  background: url(images/poweredby.png) no-repeat 0 0 transparent;
   text-indent:-999em;
   display:block;
   width:148px;
