--- a/sites/all/modules/scholar_scholar/scholarregister/theme/scholarregister.css
+++ b/sites/all/modules/scholar_scholar/scholarregister/theme/scholarregister.css
@@ -55,9 +55,15 @@ body.page-site-register #header-left {
 
 body.page-site-register #header h1 {
   background-image: url(images/register-logo.png);
-  width: 295px;
+  width: 298px;
   height:55px;
-  margin-left: 0;
+  margin-left: -2px;
+  }
+
+
+body.page-site-register #header h1 a, body.page-site-register #header h1 a:visited {
+  height: 55px;
+  width: 298px;
   }
 
 body.page-site-register h2.title {
@@ -65,8 +71,8 @@ body.page-site-register h2.title {
   color:#9f9e9e;
   font-weight: normal;
   font-size: 30px;
-  margin-top: 17px;
-  margin-right: 10px;
+  margin-top: 8px;
+  margin-right: 27px;
   }
 
 
