--- a/sites/all/themes/custom/openscholar/openscholar.css
+++ b/sites/all/themes/custom/openscholar/openscholar.css
@@ -384,7 +384,7 @@ p.copy {
   }
 
 p.copy a.poweredby {
-  background-position: 0 -24px;
+  background-position: 0 -30px;
   }
 
 /* FRONT PAGE*/
@@ -445,8 +445,10 @@ body.admin-menu.section-home #content-wrapper {
 
 #content-row-2 {
   height: 348px;
-  padding-bottom: 26px;
+  padding-top: 1px;
+  padding-bottom: 36px;
   clear:both;
+  background: url(images/stack-o-sites.jpg) 0 100% no-repeat;
   }
 
 #content-row-2 .featureblock {
@@ -485,21 +487,39 @@ body.admin-menu.section-home #content-wrapper {
   border-left: none;
   }
 
+#content-row-2, #content-row-3 {
+  text-align: left;
+  color: #000;
+  width: 1082px;
+  font: 15px/18px 'DeliciousRoman', sans-serif;
+
+  }
+
 #content-row-3 {
   text-align: right;
-  color: #fff;
   width:968px;
   }
 
+#content-row-2 h3 {
+  font: 23px/23px 'DeliciousBold', sans-serif;
+  margin: 22px 0 0 22px;
+  }
+
+#content-row-2 p {
+  margin:0 0 0 22px;
+  }
+
 #content-row-3 h3 {
-  font: 48px/normal 'DeliciousRoman', sans-serif;
   color: #fff;
   margin: 0 .2em 0 0;
+  font-size: 48px;
+  line-height:normal;
   }
 
 #content-row-3 li {
   display:inline;
   font: 30px/normal 'DeliciousRoman', sans-serif;
+  color: #fff;
   }
 
 #content-row-3 li a, #content-row-3 li a:visited {
