--- a/sites/all/modules/openscholar_sitewide/scholarregister/theme/scholarregister.css
+++ b/sites/all/modules/openscholar_sitewide/scholarregister/theme/scholarregister.css
@@ -5,7 +5,7 @@ body.page-site-register {
   line-height: 115%;
   }
 
-body.page-site-register #wrapper, body.page-site-register #extradiv {
+body.page-site-register #wrapper {
   width: 740px;
   margin: 0 auto;
   }
@@ -15,22 +15,9 @@ body.page-site-register #container {
   width: 676px;
   }
 
-body.page-site-register #extradiv {
-  height: 32px;
+body.page-site-register #content-main {
+  padding: 0 !important;
   }
-
-body.page-site-register #wrapper {
-  background: url(images/register-top.png) no-repeat transparent;
-  }
-
-body.page-site-register #content-wrapper-bottom {
-  clear:both;
-  }
-
-body.page-site-register #extradiv {
-  background: url(images/register-bottom.png) no-repeat transparent;
-  }
-
 
 
 /*HEADER */
@@ -44,26 +31,10 @@ body.page-site-register #header-wrapper {
   padding: 0;
   }
 
-body.page-site-register #header-main, body.page-site-register #header-right {
-  display:none;
-  }
 
 body.page-site-register #header-left {
   margin: 0;
   position: static;
-  }
-
-body.page-site-register #header h1 {
-  background-image: url(images/register-logo.png);
-  width: 298px;
-  height:55px;
-  margin-left: -2px;
-  }
-
-
-body.page-site-register #header h1 a, body.page-site-register #header h1 a:visited {
-  height: 55px;
-  width: 298px;
   }
 
 body.page-site-register h2.title {
@@ -71,10 +42,13 @@ body.page-site-register h2.title {
   color:#9f9e9e;
   font-weight: normal;
   font-size: 30px;
-  margin-top: 8px;
+  margin-top: -47px;
   margin-right: 27px;
   }
 
+#block-openscholar_front-top_links, .footer-login {
+  display:none;
+  }
 
 /*FORM */
 
