--- a/sites/all/themes/custom/scholars_harvard/scholars-harvard.css
+++ b/sites/all/themes/custom/scholars_harvard/scholars-harvard.css
@@ -28,6 +28,10 @@ body.not-front #content-main {
   width: auto;
   }
 
+body.section-user #content-main, body.section-users #content-main {
+  padding: 0;
+  }
+
 /* HEADER ELEMENTS */
 
 #header {
