--- a/sites/all/modules/openscholar_sitewide/scholarregister/theme/scholarregister.css
+++ b/sites/all/modules/openscholar_sitewide/scholarregister/theme/scholarregister.css
@@ -8,6 +8,7 @@ body.page-site-register {
 body.page-site-register #wrapper {
   width: 740px;
   margin: 0 auto;
+  background: transparent;
   }
 
 body.page-site-register #container {
@@ -47,6 +48,10 @@ body.page-site-register h2.title {
   }
 
 #block-openscholar_front-top_links, .footer-login {
+  display:none;
+  }
+
+#block-openscholar_front-top_links a {
   display:none;
   }
 
