--- a/sites/all/themes/openscholar/openscholar_default/openscholar_default.css
+++ b/sites/all/themes/openscholar/openscholar_default/openscholar_default.css
@@ -32,6 +32,13 @@ body.section-user, body.section-users {
   -webkit-border-radius: 8px;
   }
 
+.section-user #block-openscholar_front-top_links a,
+.section-users #block-openscholar_front-top_links a,
+.section-user p.copy a.footer-login,
+.section-users p.copy a.footer-login {
+  display:none;
+  }
+
 .front #container {
   width: 995px;
   padding: 0;
@@ -56,6 +63,8 @@ a:hover {
   line-height: 44px;
   margin-left: 30px;
   }
+
+
 
 h2, h3, #sidebar-left a, #header {
   font-weight: bold;
@@ -189,6 +198,19 @@ td, td.description {
 
  /* USERS SECTION */
 
+.section-user #header {
+  height: auto;
+  }
+
+.section-user #header h1, .section-users #header h1 {
+  margin: 0;
+  }
+
+.section-user #footer {
+  padding-bottom: 0;
+  padding-top: 34px;
+  }
+
 .section-user input.form-submit, .section-users input.form-submit {
   float:right;
   }
@@ -203,6 +225,7 @@ td, td.description {
 
 .section-user div.tabs ul.primary, .section-users div.tabs ul.primary {
   padding-left: 36px;
+  width: 470px;
   }
 
 .section-user div.tabs ul.primary li a, .section-users div.tabs ul.primary li a {
