footer on reg page

--- a/sites/all/modules/openscholar_sitewide/scholarregister/theme/scholarregister.css
+++ b/sites/all/modules/openscholar_sitewide/scholarregister/theme/scholarregister.css
@@ -20,6 +20,9 @@ body.page-site-register #content-main {
   padding: 0 !important;
   }
 
+body.page-site-register #footer {
+  padding:19px 0;
+  }
 
 /*HEADER */
 
