--- a/sites/all/modules/openscholar_sitewide/scholarregister/theme/scholarregister.css
+++ b/sites/all/modules/openscholar_sitewide/scholarregister/theme/scholarregister.css
@@ -41,12 +41,17 @@ body.page-site-register #header-left {
   position: static;
   }
 
+body.page-site-register #header h1 {
+  margin-left: 0;
+  float:left;
+  }
+
 body.page-site-register h2.title {
   float:right;
   color:#9f9e9e;
   font-weight: normal;
   font-size: 30px;
-  margin-top: -47px;
+  margin-top: -66px;
   margin-right: 27px;
   }
 
