--- a/sites/all/themes/openscholar/openscholar_default/openscholar_default.css
+++ b/sites/all/themes/openscholar/openscholar_default/openscholar_default.css
@@ -62,8 +62,12 @@ a:hover {
   font-size: 26px;
   line-height: 44px;
   margin-left: 30px;
+  float:left;
   }
 
+#header h1 a, #header h1 a:visited {
+  color: #313030;
+  }
 
 
 h2, h3, #sidebar-left a, #header {
