fix for footer-message

--- a/sites/all/themes/openscholar/scholar_base/scholar-base.css
+++ b/sites/all/themes/openscholar/scholar_base/scholar-base.css
@@ -481,6 +481,12 @@ body.header-left-right #header-right {
   padding-top: 50px;
   }
 
+#footer .block, #footer-message {
+  display:inline;
+  }
+
+
+
 /* Node */
 
 .node {
