fix for grid of websites

--- a/sites/all/themes/openscholar/openscholar_default/openscholar_default.css
+++ b/sites/all/themes/openscholar/openscholar_default/openscholar_default.css
@@ -165,6 +165,10 @@ td, td.description {
   font-size: .9em;
   }
 
+.section-websites .view-openscholar-sites td {
+  width: 25%;
+  }
+
 /* FRONT PAGE LAYOUT */
 
 .front #content-top {
