work on front page

--- a/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
+++ b/sites/all/modules/custom/iqss/iqss_gking/iqss_gking.css
@@ -1,3 +1,21 @@
+#block-iqss_gking-areas_of_research {
+  background:#fff;
+  position: relative;
+  height: 275px;
+  background: url(images/research-block.png) no-repeat 0 0 #fff;
+  clear:both;
+  padding: 0;
+  }
+
+#block-iqss_gking-areas_of_research h3,
+#block-iqss_gking-areas_of_research h4 {
+  font: 25px/normal 'LeagueGothicRegular', sans-serif;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background: transparent;
+  letter-spacing: .5px;
+  }
 
 #block-iqss_gking-areas_of_research #methods h4 {
   position: relative;
@@ -5,19 +23,12 @@
   top:-15px;
   margin-bottom: 5px;
   background: url(images/connector.png) no-repeat 100% 50% transparent;
-  padding-right: 133px;
+  padding-right: 136px;
   width: 62px;
   }
 
-#block-iqss_gking-areas_of_research {
-  background:#fff;
-  position: relative;
-  height: 275px;
-  background: url(images/research-block.png) no-repeat 0 0 #fff;
-  }
-
 #block-iqss_gking-areas_of_research .col {
-  width: 308px;
+  width: 351px;
   clear: left;
   float: left;
   }
@@ -35,7 +46,8 @@
 
 #block-iqss_gking-areas_of_research h3,
 #block-iqss_gking-areas_of_research #methods {
-  margin-left: 254px;
+  margin-left: 251px;
+  margin-top: 16px;
   }
 
 #block-iqss_gking-areas_of_research #methods {
@@ -47,7 +59,11 @@
   clear:none;
   margin-top: -30px;
   margin-right: 0;
-  width: 383px;
+  width: 380px;
+  }
+
+#block-iqss_gking-areas_of_research #applications h4 {
+  margin-bottom: 20px;
   }
 
 #block-iqss_gking-areas_of_research dd {
